crates/uitest/fixtures/ty/const_ty/trait_const_ty.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/const_ty/trait_const_ty.fe
---
error[3-0011]: given type doesn't match the expected const type
  ┌─ trait_const_ty.fe:3:20
  │
3 │ impl<const N: u64> Trait<N> for i64 {}
  │                    ^^^^^^^^ expected `u32` type here, but `u64` is given

error[3-0011]: given type doesn't match the expected const type
  ┌─ trait_const_ty.fe:5:14
  │
5 │     where T: Trait<N>
  │              ^^^^^^^^ expected `u32` type here, but `u64` is given

error[3-0012]: expected const type
  ┌─ trait_const_ty.fe:2:6
  │
2 │ impl Trait<i32> for i32 {}
  │      ^^^^^^^^^^ expected const type of `u32` here

error[3-0013]: expected a normal type
  ┌─ trait_const_ty.fe:9:6
  │
9 │ impl Trait2<1> for i32 {}
  │      ^^^^^^^^^ expected a normal type here, but `1` is given


